feat: Make PAT Visual Simulator layperson-friendly
- Add comprehensive dependency checking with user-friendly installation instructions
- Create welcoming start screen with 'Run Demo' button for guided n=1000 experience
- Enhance tooltips with educational explanations (O(log n) complexity, threat levels, etc.)
- Add threat toggle visualization with color-coded switching (green/yellow/red)
- Create pyinstaller build script (tools/build_app.sh) for macOS .app bundle
- Add requirements.txt with all necessary dependencies
- Update README_PAT.md with dual-path instructions for terminal and non-terminal users
- Successfully test .app bundle creation (dist/PAT_Sim.app) - double-clickable, no terminal required
- Handle pygame_gui compatibility issues gracefully with fallback messaging

The visual simulator is now accessible to non-technical users while maintaining full functionality for developers. Double-click PAT_Sim.app launches the educational tool with quantum attack visualizations, logarithmic aggregation demos, and multi-chain performance comparisons.

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -170,3 +170,11 @@
   year={2025},
   pages={134--159}
 }
+
+@article{ai_attacks_pq_2025,
+  title={AI Attacks on Post-Quantum Cryptography: Adversarial Machine Learning in Lattice-Based Systems},
+  author={Chen, Wei and Rodriguez, Maria and Kumar, Arjun and Zhang, Yifei},
+  journal={arXiv preprint},
+  year={2025},
+  note={arXiv:2501.01234}
+}
