Docs and Sim updates
documents and pat_web_sim updated.

--- a/pat/docs/references.bib
+++ b/pat/docs/references.bib
@@ -178,3 +178,19 @@
   year={2025},
   note={arXiv:2501.01234}
 }
+
+@misc{bitinfocharts_2025,
+  title={Blockchain Transaction Rate Statistics},
+  author={{BitInfoCharts}},
+  year={2025},
+  note={Accessed: November 2025},
+  url={https://bitinfocharts.com}
+}
+
+@misc{solanacompass_2025,
+  title={Solana TPS and Performance Metrics},
+  author={{SolanaCompass}},
+  year={2025},
+  note={Accessed: November 2025},
+  url={https://solanacompass.com}
+}
